--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,11 +9,11 @@ book:
   chapters:
     - index.qmd
     - intro.qmd
-    - wk2_xaringen.qmd
     - wk3_RS_data.qmd
     - wk4_policy.qmd
     - wk5_GEE.qmd
     - wk6_classification1.qmd
+    - wk7_classification2.qmd
     - wk9_SAR_data.qmd
     - summary.qmd
     - references.qmd
